--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,20 @@
+.menuButton {
+  color: rgb(255, 255, 255);
+  margin-right: 8px;
+}
+
+.homeButton{
+  background-color: transparent;
+  margin-right: 1.5em;
+  img{
+    display: block;
+  }
+}
+
+.headerLogo{
+  height: 24px;
+}
+
 .homeTitle{
   color: rgb(255, 255, 255);
   margin: 0;
@@ -5,6 +22,11 @@
   font-size: 30px;
   font-family: 'Futura-Bold', sans-serif;
   text-align: center;
+  flex-grow: 1;
+}
+
+.rightHeaderImg{
+  margin-right: 1em;
 }
 
 .homeDescription{
@@ -12,75 +34,25 @@
   color: rgb(0,0,0);
   font-size: 18px;
   font-family: 'Futura', sans-serif;
-  margin: 2em;
+  margin-left: 8%;
+	margin-right: 8%;
+	margin-top: calc(30vh);
+	border-radius: 16px;
   padding: 1em;
-  border-radius: 1em;
+	font-size: 18px;
+  text-align: center;
 }
 
-.menuButton {
-  color: rgb(255, 255, 255);
-}
-
-.reveal {
-  transition: transform 0.3s ease;
-  transform: translateX(250px); 
-}
-
-.main-content {
-  transition: transform 0.3s ease;
-}
-
-
-.homeButton{
-  background-color: transparent;
-  margin: 1em;
-}
-
-.rightHeaderImg{
-  margin-right: 1em;
-}
-
-ion-button {
-  text-transform: none;
-  font-size: 17px;
-  font-family: 'Futura', sans-serif;
-}
-
-ion-toggle {
-  --track-background: var(--ion-color-medium-shade);
-  --track-background-checked: #ddd;
-  
-  --handle-background: var(--ion-color-primary);
-  --handle-background-checked: var(--ion-color-primary-shade);
-  --handle-width: 25px;
-  --handle-height: 27px;
-  --handle-max-height: auto;
-  --handle-spacing: 6px;
-  
-  --handle-border-radius: 4px;
-  --handle-box-shadow: none;
-}
-
-ion-toggle::part(track) {
-  height: 10px;
-  width: 65px;
-  overflow: visible;
-}
-
-ion-toggle .toggle-icon {
-  display: none;
-}
-
-.mainHomeText {
-  font-size: 30px;
-  font-family: 'Futura-Bold', sans-serif;
+.itemIcon{
+  height: 24px;
+  margin-right: 8px;
 }
 
 .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: sticky;
 }
 
 .navButtons {
@@ -95,7 +67,7 @@ ion-toggle .toggle-icon {
 }
 
 .breadcrumb {
-  font-family: Futura;
+  font-family: 'Futura', sans-serif;
   color: var(--text-color);
   position: absolute;
   right: 1em;
@@ -134,69 +106,51 @@ ion-toggle .toggle-icon {
   overflow: hidden;
 }
 
-.searchBar {
-  background-color: var(--ion-color-secondary-shade);
-  font-size: 16px;
-  height: 40px;
-  font-family: Futura;
-  border: none;
-  border-radius: 5px;
-  padding-left: 0.5em;
-}
-
-.search-bar-container {
-  margin: 1em 0;
-  margin-right: 1.5em;
-  position: absolute;
-  right: 0;
-  top: 3em;
-  z-index: 10;
-}
-
-.search-bar-container input {
-  width: 100%;
-  font-size: 16px;
-}
-
-.search-bar-container input::placeholder {
-  color: var(--ion-color-primary-contrast);
-}
-
-.table-title {
+.levelTitle {
   text-align: left;
   font-family: 'Futura-Bold', sans-serif;
+  font-size: 14px;
+  margin-left: 2em;
 }
 
-.child-table {
-  transition: 0.1s;
+.cardImage{
   width: 100%;
-  overflow-y: auto;
-  display: block;
 }
 
-.table-wrapper {
+.contentWrapper {
   overflow-y: auto;
   overflow-x: hidden;
   display: block;
+  margin-left: 2em;
+  margin-right: 2em;
+  box-sizing: border-box;
 }
 
-.child-col-1 {
-  text-align: left;
-  padding-left: 1.5em;
-}
-
-.child-col-2 {
-  padding: 1em;
-  cursor: default;
-  text-align: left;
-  color: var(--content-table-description);
-}
-
-.child-url {
-  text-decoration: none;
-  color: var(--content-table-title);
+.cardTitle{
+  color: var(--ion-color-secondary-shade);
   cursor: pointer;
-  text-align: left;
+}
+
+.cardSubtitle{
+  color: rgb(0,0,0);
+  cursor: default;
+}
+
+.cardContent{
+  color: rgb(93, 93, 93);
+  cursor: default;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
+  gap: 0.5em; 
+}
+
+.listTitle{
+  font-family: 'Futura-Bold', sans-serif;
+  color: var(--ion-color-secondary-shade);
+  cursor: pointer;
 }
 
 .errorMessage {
@@ -210,4 +164,40 @@ ion-toggle .toggle-icon {
   font-size: 14px;
   font-family: 'Futura', sans-serif;
   color: rgb(255, 255, 255);
+}
+
+/*Ionic component's styling*/
+ion-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: rgb(255, 255, 255);
+}
+
+ion-searchbar.custom {
+  --background: var(--ion-color-secondary-shade);
+  --color: var(--ion-color-primary-contrast);
+  --placeholder-color: var(--ion-color-primary-contrast);
+  --icon-color: var(--ion-color-primary-contrast);
+  --clear-button-color: var(--ion-color-primary-contrast);
+  width: 200px;
+  --border-radius: 4px;
+  margin-right: 1em;
+  text-align: left;
+}
+
+ion-button {
+  text-transform: none;
+  font-size: 16px;
+  font-family: 'Futura', sans-serif;
+}
+
+ion-card {
+  width: 96%;
+  height: 96%;
+  font-family: 'Futura', sans-serif;
+}
+
+ion-item {
+  margin: 0.5em;
 }
