--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
     <ion-title class="homeTitle">{{ 'home.title' | translate }}</ion-title>
 
     <ion-buttons slot="end">
-      <ion-searchbar id="searchbar" class="custom" placeholder="{{ 'home.search' | translate }}" autocomplete="off"></ion-searchbar>
+      <ion-searchbar id="searchInput" class="custom" placeholder="{{ 'home.search' | translate }}" autocomplete="off" (ionInput)="search()"></ion-searchbar>
       <img class="rightHeaderImg" src="../../assets/Images/Logo_4B.png" />
     </ion-buttons>
   </ion-toolbar>
@@ -20,12 +20,10 @@
     <ion-content>
       <ng-container *ngFor="let menuItem of menuData">
         <div>
-          <ion-button fill="clear" (click)="FillContent(menuItem)"><img src="{{menuItem.icon}}" class="itemIcon">{{
-            menuItem.title }}</ion-button>
+          <ion-button fill="clear" (click)="FillContent(menuItem)"><img src="{{menuItem.icon}}" class="itemIcon">{{menuItem.title }}</ion-button>
         </div>
       </ng-container>
-      <ion-button fill="cleat" href="https://caixa.sharepoint.com/sites/CETAD10"><img
-          src="../../assets/Images/Menu_Icons/X_Caixa.svg" class="itemIcon" />CESTI35</ion-button>
+      <ion-button fill="cleat" href="https://caixa.sharepoint.com/sites/CETAD10" target="_blank"><img src="../../assets/Images/Menu_Icons/X_Caixa.svg" class="itemIcon" />CESTI35</ion-button>
       <ion-button fill="clear" (click)="openEndMenu()"><img src="../../assets/Images/Menu_Icons/Settings.svg"
           class="itemIcon" />{{ 'home.settings' | translate }}</ion-button>
     </ion-content>
