--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,21 +1,34 @@
 .menuButton {
   color: rgb(255, 255, 255);
   margin-right: 8px;
-}
 
-.homeButton{
-  background-color: transparent;
-  margin-right: 1.5em;
-  img{
-    display: block;
+  @media (max-width: 500px) {
+    margin-right: 0;
   }
 }
 
-.headerLogo{
-  height: 24px;
+.homeButton {
+  background-color: transparent;
+  margin-right: 1.5em;
+
+  img {
+    display: block;
+  }
+
+  @media (max-width: 500px) {
+    display: none;
+  }
 }
 
-.homeTitle{
+.headerLogo {
+  height: 24px;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+.homeTitle {
   color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
@@ -23,27 +36,35 @@
   font-family: 'Futura-Bold', sans-serif;
   text-align: center;
   flex-grow: 1;
+
+  @media (max-width: 500px) {
+    font-size: 18px;
+  }
 }
 
-.rightHeaderImg{
+.rightHeaderImg {
   margin-right: 1em;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
 }
 
-.homeDescription{
+.homeDescription {
   background-color: rgb(255, 255, 255);
-  color: rgb(0,0,0);
+  color: rgb(0, 0, 0);
   font-size: 18px;
   font-family: 'Futura', sans-serif;
   margin-left: 8%;
-	margin-right: 8%;
-	margin-top: calc(30vh);
-	border-radius: 16px;
+  margin-right: 8%;
+  margin-top: calc(30vh);
+  border-radius: 16px;
   padding: 1em;
-	font-size: 18px;
+  font-size: 18px;
   text-align: center;
 }
 
-.itemIcon{
+.itemIcon {
   height: 24px;
   margin-right: 8px;
 }
@@ -113,10 +134,6 @@
   margin-left: 2em;
 }
 
-.cardImage{
-  width: 100%;
-}
-
 .contentWrapper {
   overflow-y: auto;
   overflow-x: hidden;
@@ -126,28 +143,60 @@
   box-sizing: border-box;
 }
 
-.cardTitle{
+.cardImage {
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  max-width: 300px;
+  max-height: 300px;
+  transition: transform 0.2s ease;
+
+  /* Smooth movement */
+  img {
+    display: block;
+    width: 100%;
+  }
+}
+
+.cardTitle {
   color: var(--ion-color-secondary-shade);
   cursor: pointer;
 }
 
-.cardSubtitle{
-  color: rgb(0,0,0);
+.cardSubtitle {
+  color: rgb(0, 0, 0);
   cursor: default;
 }
 
-.cardContent{
+.cardContent {
   color: rgb(93, 93, 93);
   cursor: default;
 }
 
-.grid-container {
+.gridContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
-  gap: 0.5em; 
+  gap: 0.5em;
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
-.listTitle{
+.generalGridContanier{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
+  gap: 0.5em;
+  margin: 20px;
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.listTitle {
   font-family: 'Futura-Bold', sans-serif;
   color: var(--ion-color-secondary-shade);
   cursor: pointer;
@@ -159,6 +208,18 @@
   font-family: 'Futura';
 }
 
+.generalErrorMessage {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Futura';
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: calc(20vh);
+  border-radius: 16px;
+  padding: 1em;
+  text-align: center;
+}
+
 .footer {
   text-align: center;
   font-size: 14px;
@@ -167,12 +228,6 @@
 }
 
 /*Ionic component's styling*/
-ion-toolbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: rgb(255, 255, 255);
-}
 
 ion-searchbar.custom {
   --background: var(--ion-color-secondary-shade);
@@ -184,6 +239,17 @@ ion-searchbar.custom {
   --border-radius: 4px;
   margin-right: 1em;
   text-align: left;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+ion-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: rgb(255, 255, 255);
 }
 
 ion-button {
@@ -196,6 +262,11 @@ ion-card {
   width: 96%;
   height: 96%;
   font-family: 'Futura', sans-serif;
+
+  @media (max-width: 500px) {
+    width: 90%;
+    height: 90;
+  }
 }
 
 ion-item {
