--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -53,17 +53,19 @@
     <p class="errorMessage">{{ 'home.noItemFound' | translate }}</p>
   </div>
 
-  <div class="content-area">
+  <div>
     <ng-container *ngFor="let item of currentContent">
-      <ion-card *ngIf="item.url" (click)="navigateToItem(item)">
-        <ion-card-header>
-          <ion-card-title>
-            <a [href]="item.url" target="_blank" rel="noopener noreferrer" class="cardTitle">{{ item.title }}</a>
-          </ion-card-title>
-          <ion-card-subtitle class="cardSubtitle">{{ item.description }}</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-      
+      <div class="containerWrapper">
+        <div class="gridContainer">
+          <ion-card *ngIf="item.url" (click)="navigateToItem(item)">
+            <ion-card-header>
+              <ion-card-title>
+                <a [href]="item.url" target="_blank" rel="noopener noreferrer" class="cardTitle">{{ item.title }}</a>
+              </ion-card-title>
+              <ion-card-subtitle class="cardSubtitle"><p>{{ item.description }}</p></ion-card-subtitle>
+            </ion-card-header>
+          </ion-card>
+        </div>
   
       <div *ngIf="!item.url"></div>
       <ion-list *ngIf="!item.url">
@@ -73,6 +75,7 @@
           </ion-label>
         </ion-item>
       </ion-list>
+    </div>
     </ng-container>
   </div>
   
