--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,14 @@
-<ion-header>
+<ion-header><!--Header-->
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start"><!--Header Buttons (left side)-->
       <ion-menu-button class="menuButton"></ion-menu-button>
-      <button class="homeButton" (click)="homeButtonClicked()"> <img src="../../assets/Images/Menu_Icons/Home.svg" height="20em" /></button>
+      <button class="homeButton" (click)="homeButton()"> <img src="../../assets/Images/Menu_Icons/Home.svg" height="20em" /></button>
       <img class="headerLogo" />
     </ion-buttons>
 
-    <ion-title class="homeTitle">{{ 'home.title' | translate }}</ion-title>
+    <ion-title class="title">{{ 'home.title' | translate }}</ion-title><!--App Title-->
 
-    <ion-buttons slot="end">
+    <ion-buttons slot="end"><!--Header Buttons (right side)-->
       <ion-searchbar id="searchInput" class="custom" placeholder="{{ 'home.search' | translate }}" autocomplete="off" (ionInput)="search()"></ion-searchbar>
       <img class="rightHeaderImg" src="../../assets/Images/Logo_4B.png" />
     </ion-buttons>
@@ -16,21 +16,21 @@
 </ion-header>
 
 <ion-content>
-  <ion-menu contentId="main-content">
+  <ion-menu contentId="main-content"><!--First level content mebu-->
     <ion-content>
-      <ng-container *ngFor="let menuItem of menuData">
+      <ng-container *ngFor="let menuItem of menumodel">
         <div>
           <ion-button fill="clear" (click)="FillContent(menuItem)"><img src="{{menuItem.icon}}" class="itemIcon">{{menuItem.title }}</ion-button>
         </div>
       </ng-container>
       <ion-button fill="cleat" href="https://caixa.sharepoint.com/sites/CETAD10" target="_blank"><img src="../../assets/Images/Menu_Icons/X_Caixa.svg" class="itemIcon" />CESTI35</ion-button>
-      <br/> 
-      <ion-button fill="clear" (click)="openEndMenu()"><img src="../../assets/Images/Menu_Icons/Settings.svg"class="itemIcon" />{{ 'home.settings' | translate }}</ion-button>
+      <br />
+      <ion-button fill="clear" (click)="openEndMenu()"><img src="../../assets/Images/Menu_Icons/Settings.svg" class="itemIcon" />{{ 'home.settings' | translate }}</ion-button>
     </ion-content>
   </ion-menu>
 
-  <div class="nav-container">
-    <div class="breadcrumb" *ngIf="breadcrumbs.length > 0">
+  <div class="nav-container"><!--Navigation items container-->
+    <div class="breadcrumb" *ngIf="breadcrumbs.length > 0"><!--Breadcrumb-->
       <ng-container *ngFor="let breadcrumb of breadcrumbs; let i = index">
         <span (click)="navigateToBreadcrumb(i)" class="breadcrumb-item">{{ breadcrumb }}</span>
         <ng-container *ngIf="i < breadcrumbs.length - 1">
@@ -39,49 +39,60 @@
       </ng-container>
     </div>
 
-    <div class="navButtons">
-      <ion-button class="backButton" *ngIf="showBackButton" fill="clear" shape="round" (click)="goBack()"><ion-icon slot="icon-only" name="arrow-back-circle-outline"></ion-icon></ion-button>
-      <ion-button class="forwardButton" *ngIf="showForwardButton" fill="clear" shape="round" (click)="goForward()"><ion-icon slot="icon-only" name="arrow-forward-circle-outline"></ion-icon></ion-button>
+    <div class="navButtons"> <!--Navigation Buttons-->
+      <ion-button class="backButton" *ngIf="showBackButton" fill="clear" shape="round" (click)="backButton()"><ion-icon slot="icon-only" name="arrow-back-circle-outline"></ion-icon></ion-button>
+      <ion-button class="forwardButton" *ngIf="showForwardButton" fill="clear" shape="round" (click)="forwardButton()"><ion-icon slot="icon-only" name="arrow-forward-circle-outline"></ion-icon></ion-button>
     </div>
   </div>
 
-  <div #mainContent class="homeText" id="main-content">
-    <p class="homeDescription">{{ 'home.details' | translate }}</p>
+  <div #description id="main-content"><!--Page Description-->
+    <p class="description">{{ 'home.description' | translate }}</p>
   </div>
 
-  <div *ngIf="noItemsFound" class="no-items-message">
+  <div *ngIf="errormessage"><!--Error message-->
     <p class="errorMessage">{{ 'home.noItemFound' | translate }}</p>
   </div>
 
-  <div>
-    <ng-container *ngFor="let item of currentContent">
-      <div class="containerWrapper">
-        <div class="gridContainer">
-          <ion-card *ngIf="item.url" (click)="navigateToItem(item)">
-            <ion-card-header>
-              <ion-card-title>
-                <a [href]="item.url" target="_blank" rel="noopener noreferrer" class="cardTitle">{{ item.title }}</a>
-              </ion-card-title>
-              <ion-card-subtitle class="cardSubtitle"><p>{{ item.description }}</p></ion-card-subtitle>
-            </ion-card-header>
-          </ion-card>
-        </div>
-  
-      <div *ngIf="!item.url"></div>
-      <ion-list *ngIf="!item.url">
-        <ion-item (click)="navigateToItem(item)">
-          <ion-label>
-            <h1>{{ item.title }}</h1>
-          </ion-label>
-        </ion-item>
-      </ion-list>
+  <div class="contentWrapper"><!--Content display-->
+    <div class="gridContainer"><!--Content grid-->
+      <ng-container *ngFor="let item of childContent">
+        <ion-card *ngIf="item.url">
+          <ion-card-header (click)="navigateToItem(item)">
+            <ion-card-title>
+              <a [href]="item.url" target="_blank" rel="noopener noreferrer" class="cardTitle">{{ item.title }}</a>
+            </ion-card-title>
+            <ion-card-subtitle class="cardSubtitle">
+              <p>{{ item.description }}</p>
+            </ion-card-subtitle>
+          </ion-card-header>
+
+          <ion-button fill="clear" *ngIf="item.icon" class="popoverButton" (click)="openPopover($event, item)">
+            <ion-icon name="image-outline"></ion-icon>
+          </ion-button>
+
+          <ion-popover [isOpen]="popoverOpen === item" [event]="popoverEvent" (ionPopoverDidDismiss)="popoverOpen = null">
+            <ng-template>
+              <div class="popoverContent">
+                <img [src]="item.icon" [alt]="item.title" />
+                <p>{{ item.title }}</p>
+                <ion-button class="exitButton">{{ 'home.exit' | translate }}</ion-button>
+              </div>
+            </ng-template>
+          </ion-popover>
+        </ion-card>
+      </ng-container>
     </div>
+
+    
+    <ng-container *ngFor="let item of childContent"><!--No-URL content-->
+      <h1 *ngIf="!item.url" class="selectionItem" (click)="navigateToItem(item)">{{ item.title }}</h1>
     </ng-container>
+    
   </div>
-  
+
 </ion-content>
 
-<ion-menu side="end" contentId="main-content">
+<ion-menu side="end" contentId="main-content"><!--Settings menu-->
   <ion-content class="ion-padding">
     <p>{{ 'home.settings' | translate }}</p>
     <p>{{ 'home.language' | translate }}</p>
@@ -90,7 +101,7 @@
   </ion-content>
 </ion-menu>
 
-<ion-footer>
+<ion-footer><!--Footer-->
   <ion-toolbar>
   </ion-toolbar>
 </ion-footer>
