--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,92 +1,3 @@
-.menuButton {
-  color: rgb(255, 255, 255);
-  margin-right: 8px;
-
-  @media (max-width: 500px) {
-    margin-right: 0;
-  }
-}
-
-.homeButton {
-  background-color: transparent;
-  margin-right: 1.5em;
-
-  img {
-    display: block;
-  }
-
-  @media (max-width: 500px) {
-    display: none;
-  }
-}
-
-.headerLogo {
-  height: 24px;
-
-  @media (max-width: 500px) {
-    display: none;
-  }
-}
-
-.homeTitle {
-  color: rgb(255, 255, 255);
-  margin: 0;
-  padding: 0;
-  font-size: 30px;
-  font-family: 'Futura-Bold', sans-serif;
-  text-align: center;
-  flex-grow: 1;
-
-  @media (max-width: 500px) {
-    font-size: 18px;
-  }
-}
-
-.rightHeaderImg {
-  margin-right: 1em;
-
-  @media (max-width: 500px) {
-    display: none;
-  }
-}
-
-.homeDescription {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 18px;
-  font-family: 'Futura', sans-serif;
-  margin-left: 8%;
-  margin-right: 8%;
-  margin-top: calc(30vh);
-  border-radius: 16px;
-  padding: 1em;
-  font-size: 18px;
-  text-align: center;
-}
-
-.itemIcon {
-  height: 24px;
-  margin-right: 8px;
-}
-
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-}
-
-.navButtons {
-  margin: 0;
-  max-width: 15%;
-  width: 112px;
-  border-radius: 0em 5em 5em 0em;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-}
-
 .breadcrumb {
   font-family: 'Futura', sans-serif;
   color: var(--text-color);
@@ -104,8 +15,11 @@
   padding-bottom: 3em;
 }
 
-.breadcrumb::-webkit-scrollbar {
-  display: none;
+.breadcrumb-separator {
+  margin-right: 0.5em;
+  color: var(--text-color);
+  display: inline-block;
+  cursor: default;
 }
 
 .breadcrumb span {
@@ -115,11 +29,8 @@
   cursor: pointer;
 }
 
-.breadcrumb-separator {
-  margin-right: 0.5em;
-  color: var(--text-color);
-  display: inline-block;
-  cursor: default;
+.breadcrumb::-webkit-scrollbar {
+  display: none;
 }
 
 .breadcrumb-wrapper {
@@ -127,27 +38,16 @@
   overflow: hidden;
 }
 
-.levelTitle {
-  text-align: left;
-  font-family: 'Futura-Bold', sans-serif;
-  font-size: 20px;
-  margin-left: 2em;
-}
-
-.contentWrapper {
-  overflow-y: auto;
-  overflow-x: hidden;
-  display: block;
-  margin-left: 2em;
-  margin-right: 2em;
-  box-sizing: border-box;
+.cardContent {
+  color: rgb(93, 93, 93);
+  cursor: default;
 }
 
 .cardImage {
   display: none;
   position: absolute;
   z-index: 1000;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   border-radius: 5px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -158,50 +58,52 @@
   }
 }
 
+.cardSubtitle {
+  color: rgb(0, 0, 0);
+  cursor: default;
+}
+
 .cardTitle {
   color: var(--ion-color-secondary-shade);
   cursor: pointer;
   text-decoration: none;
 }
 
-.cardSubtitle {
+.contentWrapper {
+  margin-top: 5px; 
+  padding-left: 1em;
+}
+
+.description {
+  background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
-  cursor: default;
-}
-
-.cardContent {
-  color: rgb(93, 93, 93);
-  cursor: default;
-}
-
-.gridContainer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
-  gap: 0.5em;
-  @media (max-width: 500px) {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-.generalGridContanier{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
-  gap: 0.5em;
-  margin: 20px;
-  @media (max-width: 500px) {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-.listTitle {
-  font-family: 'Futura-Bold', sans-serif;
-  cursor: pointer;
+  font-size: 18px;
+  font-family: 'Futura', sans-serif;
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: calc(30vh);
+  border-radius: 16px;
+  padding: 1em;
+  font-size: 18px;
+  text-align: center;
 }
 
 .errorMessage {
   text-align: center;
   font-size: 20px;
   font-family: 'Futura';
+}
+
+.exitButton{
+   --background: rgb(0, 79, 159);
+   color: rgb(255, 255, 255);
+}
+
+.footer {
+  text-align: center;
+  font-size: 14px;
+  font-family: 'Futura', sans-serif;
+  color: rgb(255, 255, 255);
 }
 
 .generalErrorMessage {
@@ -216,11 +118,91 @@
   text-align: center;
 }
 
-.footer {
-  text-align: center;
-  font-size: 14px;
-  font-family: 'Futura', sans-serif;
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
+  gap: 0.5em;
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.headerLogo {
+  height: 24px;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+.homeButton {
+  background-color: transparent;
+  margin-right: 1.5em;
+
+  img {
+    display: block;
+  }
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+.itemIcon {
+  height: 24px;
+  margin-right: 8px;
+}
+
+.levelTitle {
+  text-align: left;
+  font-family: 'Futura-Bold', sans-serif;
+  font-size: 20px;
+  margin-left: 2em;
+}
+
+.listTitle {
+  font-family: 'Futura-Bold', sans-serif;
+  cursor: pointer;
+}
+
+.menuButton {
   color: rgb(255, 255, 255);
+  margin-right: 8px;
+
+  @media (max-width: 500px) {
+    margin-right: 0;
+  }
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+  position: sticky; 
+  top: 0; 
+  z-index: 50;
+  background-color: var(--ion-color-light);
+  width: 100%;
+  left: 0;
+  padding: 10px;
+}
+
+.navButtons {
+  margin: 0;
+  max-width: 15%;
+  width: 112px;
+  border-radius: 0em 5em 5em 0em;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.rightHeaderImg {
+  margin-right: 1em;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
 }
 
 .popoverButton {
@@ -246,7 +228,49 @@
   }
 }
 
+.selectionItem{
+  font-family: 'Futura', sans-serif;
+  font-size: 24px;
+  margin-bottom: 2em;
+  margin-left: 1em;
+}
+
+.title {
+  color: rgb(255, 255, 255);
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  font-family: 'Futura-Bold', sans-serif;
+  text-align: center;
+  flex-grow: 1;
+
+  @media (max-width: 500px) {
+    font-size: 18px;
+  }
+}
+
 /*Ionic component's styling*/
+
+ion-button {
+  text-transform: none;
+  font-size: 16px;
+  font-family: 'Futura', sans-serif;
+}
+
+ion-card {
+  width: 96%;
+  height: 96%;
+  font-family: 'Futura', sans-serif;
+
+  @media (max-width: 500px) {
+    width: 90%;
+    height: 90;
+  }
+}
+
+ion-item {
+  margin: 0.5em;
+}
 
 ion-searchbar.custom {
   --background: var(--ion-color-secondary-shade);
@@ -269,25 +293,4 @@ ion-toolbar {
   align-items: center;
   justify-content: space-between;
   color: rgb(255, 255, 255);
-}
-
-ion-button {
-  text-transform: none;
-  font-size: 16px;
-  font-family: 'Futura', sans-serif;
-}
-
-ion-card {
-  width: 96%;
-  height: 96%;
-  font-family: 'Futura', sans-serif;
-
-  @media (max-width: 500px) {
-    width: 90%;
-    height: 90;
-  }
-}
-
-ion-item {
-  margin: 0.5em;
 }
