--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -230,10 +230,12 @@
 
 .selectionItem{
   font-family: 'Futura', sans-serif;
-  font-size: 24px;
   margin-bottom: 2em;
   margin-left: 1em;
+  cursor: pointer;
 }
+
+
 
 .title {
   color: rgb(255, 255, 255);
