--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -70,8 +70,9 @@
 }
 
 .contentWrapper {
-  margin-top: 5px; 
-  padding-left: 1em;
+  margin-bottom: 2em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 .description {
@@ -86,12 +87,11 @@
   padding: 1em;
   font-size: 18px;
   text-align: center;
-}
 
-.errorMessage {
-  text-align: center;
-  font-size: 20px;
-  font-family: 'Futura';
+  -ms-user-select: none; 
+  -webkit-user-select: none; 
+  -moz-user-select: none; 
+  user-select: none; 
 }
 
 .exitButton{
@@ -197,12 +197,26 @@
   align-items: center;
 }
 
+.notFoundMessage {
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Futura';
+  margin-top: calc(27vh);
+}
+
 .rightHeaderImg {
   margin-right: 1em;
 
   @media (max-width: 500px) {
     display: none;
   }
+}
+
+.parentTitle {
+  font-size: 22px;
+  font-family: 'Futura-Bold', sans-serif;
+  color: rgb(0, 0, 0);
+  cursor: default;
 }
 
 .popoverButton {
@@ -235,8 +249,6 @@
   cursor: pointer;
 }
 
-
-
 .title {
   color: rgb(255, 255, 255);
   margin: 0;
@@ -263,7 +275,7 @@ ion-card {
   width: 96%;
   height: 96%;
   font-family: 'Futura', sans-serif;
-
+  margin-top: 1em;
   @media (max-width: 500px) {
     width: 90%;
     height: 90;
