--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -106,18 +106,6 @@
   color: rgb(255, 255, 255);
 }
 
-.generalErrorMessage {
-  text-align: center;
-  font-size: 20px;
-  font-family: 'Futura';
-  margin-left: 8%;
-  margin-right: 8%;
-  margin-top: calc(20vh);
-  border-radius: 16px;
-  padding: 1em;
-  text-align: center;
-}
-
 .gridContainer {
   display: grid;
   grid-template-columns: repeat(3, 1fr); //the user can change the amount of items per row just by updating the repeat value
@@ -217,6 +205,7 @@
   font-family: 'Futura-Bold', sans-serif;
   color: rgb(0, 0, 0);
   cursor: default;
+  margin-top: 1.5em;
 }
 
 .popoverButton {
